Fix item and fieldname spacing

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,3 @@
   flex-direction: column;
   align-items: center;
 }
-.column-name-text {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
